new file:   adi/__init__.py  	renamed:    app.py -> adi/app.py  	new file:   adi/logs/arxiv_pipeline.lock  	new file:   adi/logs/arxiv_pipeline.log  	renamed:    serializer_mp.py -> adi/serializer_mp.py  	renamed:    tasks.py -> adi/tasks.py  	modified:   config.py  	new file:   logs/arxiv-pipeline.lock  	new file:   logs/arxiv-pipeline.log  	new file:   logs/arxiv_di.lock  	new file:   logs/arxiv_di.log  	new file:   logs/arxiv_pipeline.lock  	new file:   logs/arxiv_pipeline.log  	modified:   requirements.txt  	modified:   run.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 git+https://github.com/adsabs/ADSPipelineUtils.git@master
 git+https://github.com/seasidesparrow/adsabs-pyingest.git@master
 celery==4.1.0
+xmltodict
